--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <nav class="main-nav">
         <div id="toggle-menu" class="toggle-menu">
-            <img src="/assets/hamburger-menu-icon-png-white-15.jpg.png" alt="">
+            <img src="hamburger-menu-icon-png-white-15.jpg.png" alt="">
         </div>   
         <ul id="main-menu" class="main-menu">
             <div class="logo">
@@ -32,7 +32,7 @@
                 <a href="#" class="main-menu__link">CONTACT</a>
             </li>
         </ul>
-        <img class="nav_img" src="/assets/luigi-estuye-lucreative-HVK4t3leM1I-unsplash.jpg" alt="">
+        <img class="nav_img" src="luigi-estuye-lucreative-HVK4t3leM1I-unsplash.jpg" alt="">
     </nav>
 
 
@@ -48,7 +48,7 @@
             <img class="las-flores" src="assets/las-flores0.jpg" alt="dark-flower-background">
 
             <div class="huge3">
-            <img class="" src="assets/huge-couple.jpg" alt="">
+            <img class="" src="huge-couple.jpg" alt="">
             
 
             </div>
