--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 <p>Welcome to Omedre, where we specialize in capturing the magic of your special day. As a dedicated team of wedding photographers, we are committed to preserving the love and joy of your wedding through our lens.</p>
             </div>
 
-            <img class="las-flores" src="assets/las-flores0.jpg" alt="dark-flower-background">
+            <img class="las-flores" src="las-flores0.jpg" alt="dark-flower-background">
 
             <div class="huge3">
             <img class="" src="huge-couple.jpg" alt="">
@@ -66,7 +66,7 @@
 
 
     
-       <img src="assets/inglaterra.jpg" alt="">
+       <img src="inglaterra.jpg" alt="">
 
        <button> Learn More</button>
 
@@ -80,7 +80,7 @@
         </div>
     </main>
     <div class="gif_container">
-    <img src="assets/ezgif.com-gif-maker-12-1.gif" alt="" width="100%">
+    <img src="ezgif.com-gif-maker-12-1.gif" alt="" width="100%">
         <div class="wrapper">
             <form action="#">
                 <h1>Chat</h1>
